fix arrowpanel shadow on firefox 90

--- a/chrome/popup/popup.css
+++ b/chrome/popup/popup.css
@@ -325,7 +325,7 @@ panel[type="arrow"][side="right"] {
   margin-bottom: -44px;
 }
 
-.panel-arrowcontent {
+.panel-arrowcontent, .panel-arrowcontainer > [part="content"] {
   background: var(--arrowpanel-background) !important;
   border: var(--menu-border) !important;
   border-radius: var(--menu-border-radius) !important;
